fixed side scroll on mobile

--- a/css/container.css
+++ b/css/container.css
@@ -1,19 +1,12 @@
-body > .container {
+.container {
   display: grid;
-  grid-template-columns: minmax(150px, 250px) 1fr;
+  grid-template-columns: minmax(0px, 200px) 1fr;
   gap: 40px;
-  padding: 30px;
-  background-color: rgb(189, 189, 189);
+  padding: 10px;
 }
 
-@media only screen and (max-width: 700px) {
-  body > .container {
-    grid-template-columns: minmax(50px, 250px) 1fr;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  body > .container {
+@media only screen and (max-width: 600px) {
+  .container {
     grid-template-columns: 1fr;
   }
 }
