--- a/css/form.css
+++ b/css/form.css
@@ -1,29 +1,21 @@
-.form {
+.form form {
   background-color: rgb(241, 241, 241);
   padding: 20px 10px;
   border-radius: 5px;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-.form form {
-  display: grid;
-  justify-content: start;
-  gap: 5px;
-}
-
 .form label {
   display: block;
+  margin-bottom: 8px;
 }
 
-.form input {
+.form input,
+.form select {
   display: block;
   margin-bottom: 15px;
 }
 
-@media only screen and (max-width: 500px) {
-  .form form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+.form input:not([type="color"]) {
+  width: 100%;
 }
