--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,4 @@
 body {
   font-family: "IBM Plex Mono", monospace;
+  background-color: rgb(189, 189, 189);
 }
-
