--- a/css/output.css
+++ b/css/output.css
@@ -1,10 +1,16 @@
 .output .code-css {
   display: flex;
   flex-direction: column;
-  gap: 10px;
 }
 
 .output .code-css span {
   display: block;
   color: #333;
+  margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 400px) {
+  .output .code-css span {
+    font-size: 0.8rem;
+  }
 }
